tests/invalid/syntax/func_no_name.nyx
// INVALID: func keyword alone (no name)
// Expected parse error: function name path required
func () -> ok
    pass
